kubernetes-manifests/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devshakops-backend
  namespace: devshakops
  labels:
    app: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: deploykarle/devshakops:backend
        ports:
        - containerPort: 5000
