kubernetes-manifests/db.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: devshakops
spec:
  serviceName: mysql
  replicas: 1
  minReadySeconds: 10

  selector:
    matchLabels:
      app: mysql

  template:
    metadata:
      labels:
        app: mysql
    spec:
      terminationGracePeriodSeconds: 10

      containers:
      - name: db
        image: mysql:8

        ports:
        - containerPort: 3306

        volumeMounts:
        - name: data
          mountPath: /var/lib/mysql

        - name: initdb
          mountPath: /docker-entrypoint-initdb.d

      volumes:
      - name: initdb
        configMap:
          name: initdb-configs
         
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: ebs-sc

      resources:
        requests:
          storage: 5Gi
