kubernetes-manifests/db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: devshakops
spec:
  selector:
    app: mysql
  ports:
  - name: mysql 
    port: 3306
    targetPort: 3306
  type: ClusterIP
