kubernetes-manifests/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: devshakops
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
